Concent overflow fixed

--- a/src/assets/css/card.css
+++ b/src/assets/css/card.css
@@ -7,7 +7,3 @@ img {
   height: 160px;
   object-fit: cover;
 }
-
-.card-div {
-  height: 160px !important;
-}
